--- a/src/routes/events/events.module.css
+++ b/src/routes/events/events.module.css
@@ -19,14 +19,20 @@
   display: block;
 }
 
-.input {
+select {
+  margin-top: 2rem;
   background: white;
-  color: var(--qwik-light-blue);
   border: none;
   border-radius: 8px;
-  padding: 15px 20px;
+  padding: 15px 10px;
   margin-right: 10px;
   font-size: 0.8rem;
+}
+
+.button {
+  background-color: transparent;
+  text-decoration: underline;
+  font-size: 2rem;
 }
 
 .hint {
